# edge-transformers

./: .gitignore  Cargo.toml  Interop.cs  LICENSE  README.md
.github/workflows/: general.yml
c/: edge_transformers.h
csharp/: EdgeTransformers.cs
edge-transformers-csharp/: UpgradeLog.htm  edge-transformers-csharp.sln
edge-transformers-csharp/EdgeTransformers/: EdgeTransformersFFI.cs
edge-transformers-csharp/EdgeTransformersTests/: EdgeTransformersTests.csproj  TestModels.cs
resources/generative_test/: model.onnx  model_config.yml  special_tokens_map.json
src/: common.rs  error.rs  ffi.rs  hf_hub.rs  lib.rs  modeling.rs  pipelines.rs  sampling.rs  tokenizer.rs
src/ffi/: conditional_generation.rs  conditional_generation_with_pkvs.rs  embedding.rs  error.rs  optimum_seq2seq_generation.rs  optimum_seq2seq_generation_with_pkvs.rs  seq2seq_generation.rs  sequence_classification.rs  token_classification.rs
src/modeling/: classification.rs  conditional_generation.rs  conditional_generation_with_pkvs.rs  embedding.rs  seq2seq_decoder.rs  seq2seq_decoder_with_pkvs.rs  seq2seq_encdec.rs  seq2seq_encoder.rs
src/pipelines/: conditional_generation.rs  conditional_generation_with_pkvs.rs  embedding.rs  optimum_seq2seq_generation.rs  optimum_seq2seq_generation_with_pkvs.rs  seq2seq_generation.rs  sequence_classification.rs  token_classification.rs
tests/: bindings.rs
