[package]
name = "edge-transformers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
interoptopus_backend_csharp = "0.14.14"
interoptopus_backend_c = "0.14.14"
interoptopus_backend_cpython = "0.14.14"

[dependencies]
thread_local = "1.1.3"
paste = "1.0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ort = { version = "1.14.1", default-features = false, features = [ "half", "copy-dylibs" ] }
tokenizers = "0.13"
rand = { version = "0.8.4", features = ["alloc"] }
itertools = "0.10.5"
more-asserts = "0.3.1"
interoptopus = "0.14.14"
sha2 = "0.10.6"
hex = "0.4.3"
reqwest = { version = "0.11.3", features = ["stream"] }
futures-util = "0.3.14"
indicatif = "0.17.2"
dirs = "4.0.0"
tokio = "1.24.1"
ndarray = "0.15"
half = "2.1"

[features]
default = ["download-binaries", "generate-csharp", "generate-c"]

download-binaries = ["ort/download-binaries"]

# ONNXRuntime Execution providers
directml = ["ort/directml"]
cuda = ["ort/cuda"]
tensorrt = ["ort/tensorrt"]

# Bindings generation
generate-csharp = []
generate-c = []